# new-model-b

./: .gitignore  Anchor.toml  COMO_EMPEZAR.md  README-onramp-meld.md  README.md  SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
app/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/public/: investigacion-mercado.html  manifest.json
app/public/icons/: generate.md
app/public/sim/: financial-dashboard.html
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActivityFeed.tsx  BondingCurveChart.tsx  BuyWithCard.tsx  ChatWidget.tsx  Dashboard.tsx  DevnetBanner.tsx  FAQ.tsx  FundModal.tsx  Header.tsx  InstallPrompt.tsx  LaunchForm.tsx  SendModal.tsx  ShareToken.tsx  SwapPanel.tsx  TokenCard.tsx  WalletButton.tsx  WalletButtonInner.tsx
app/src/hooks/: useActivity.ts  useBondedPrice.ts  usePortfolio.ts  usePrivyAuth.ts  useSwap.ts  (+2 more)
docs/: matiz-design-system-v2.md  matiz-landing-narrative-v1.md  project-status-april-2026.md  social-platform-research.md  terms-of-service.md
programs/spl-token-bonding/: Cargo.toml
programs/spl-token-bonding/src/: errors.rs  lib.rs  state.rs
programs/spl-token-bonding/src/curve/: exponential.rs  mod.rs  precise_number.rs
programs/spl-token-bonding/src/instructions/: buy_v1.rs  create_curve.rs  init_token_bonding.rs  initialize_program.rs  mod.rs  sell_v1.rs  transfer_reserves.rs  update_token_bonding.rs
sdk/: package.json  tsconfig.json
sdk/src/: TokenBondingSDK.ts  index.ts  math.ts  pdas.ts  types.ts
(+54 files in other folders)
